[gd_scene load_steps=5 format=2]

[ext_resource path="res://elements/jack_connect.svg" type="Texture" id=1]
[ext_resource path="res://elements/JackIn.gd" type="Script" id=2]
[ext_resource path="res://elements/jack.svg" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.65438, 16.4763 )

[node name="JackIn" type="Node2D"]
script = ExtResource( 2 )

[node name="jack_connect" type="Sprite" parent="."]
position = Vector2( -3.063, 0 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -3.0625, -0.163752 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.58819, 0 )
shape = SubResource( 1 )

[node name="MaxDist" type="Node2D" parent="."]
position = Vector2( 86.0451, 0 )

[node name="jack" type="Sprite" parent="MaxDist"]
visible = false
position = Vector2( -68.9792, 0 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="MaxUnaligned" type="Node2D" parent="."]
position = Vector2( -3.0625, -0.163752 )

[node name="jack" type="Sprite" parent="MaxUnaligned"]
visible = false
position = Vector2( -68.9792, 0 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="PushbackDist" type="Node2D" parent="."]
position = Vector2( 57.6605, 0 )

[node name="jack" type="Sprite" parent="PushbackDist"]
visible = false
position = Vector2( 48.889, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="PushbackDist2" type="Node2D" parent="."]
position = Vector2( 83.0665, 0 )

[node name="jack" type="Sprite" parent="PushbackDist2"]
visible = false
position = Vector2( 48.889, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cutoff" type="Position2D" parent="."]
position = Vector2( -6.20772, -0.0234375 )

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_exited"]
